Fix: navbar spacing and size

--- a/client/src/components/navbar/Navbar.css
+++ b/client/src/components/navbar/Navbar.css
@@ -8,7 +8,7 @@
 .navbar-container {
   /* Ensure the navbar has a fixed width and doesn't resize */
   min-width: 188px;
-  width: 188px !important;
+  /* width: 188px !important; */
   flex-shrink: 0;
   z-index: 0;
 }
